# TestSample

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/C/: CMakeLists.txt  tls_jni.c  tls_jni.h
app/src/main/java/com/example/testsample/data/db/: ProfileDao.kt  ProfileDatabase.kt
app/src/main/java/com/example/testsample/data/model/: PolicyModel.kt  ProfileModel.kt
app/src/main/java/com/example/testsample/data/repository/: PolicyRepository.kt  ProfileRepository.kt
app/src/main/java/com/example/testsample/ui/activites/: MainActivity.kt
app/src/main/java/com/example/testsample/ui/adapter/: ProfileAdapter.kt  ProfileViewHolder.kt
app/src/main/java/com/example/testsample/utils/: Constance.kt  Constants.kt  VpnCaller.kt
app/src/main/java/com/example/testsample/vpnclient/: MainActivity.kt  tlsTunnel.kt
app/src/main/res/drawable/: background_rounded.xml  baseline_delete_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_add_profile.xml  fragment_bottom_sheet.xml  fragment_donate.xml  fragment_edit_profile.xml  fragment_home.xml  fragment_package_name.xml  fragment_policy.xml  fragment_status_profile.xml  package_name_item.xml  policy_item.xml  sheet.xml  switch_item.xml  switch_layout.xml
app/src/main/res/menu/: item_menu.xml  popup_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+37 files in other folders)
